--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+alembic==1.8.1
 Babel==2.10.3
 click==8.1.3
 colorama==0.4.5
 Flask==2.2.2
+Flask-Migrate==3.1.0
 Flask-Moment==1.0.4
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
 importlib-metadata==4.12.0
+importlib-resources==5.9.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.1
 MarkupSafe==2.1.1
 packaging==21.3
 pyparsing==3.0.9
