--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
 packaging==21.3
+psycopg2==2.9.3
 pyparsing==3.0.9
 python-dateutil==2.6.0
 pytz==2022.2.1
